# bream

./: .buildinfo  README.md  api.html  core.html  exceptions.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  core.doctree  environment.pickle  exceptions.doctree  index.doctree  usage.doctree
.github/workflows/: documentation.yml  unit_test_with_coverage.yml
_sources/: core.rst.txt  index.rst.txt  usage.rst.txt
bream/: __init__.py  _exceptions.py  exceptions.py
bream/core/: __init__.py  _checkpoint.py  _checkpoint_directory.py  _checkpointer.py  _definitions.py  _source_collection.py  _stream.py  _utils.py
docs/source/: api.rst  conf.py  exceptions.rst
tests/core/: helpers.py  test_checkpoint.py  test_checkpoint_directory.py  test_checkpointer.py  test_source_collection.py  test_stream.py  test_utils.py
